maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: identifier expected but '=' found.
def findBiscuit():Array Int = {
                            ^